Update api routes and redesign checklist manager home page
